# go-libp2p-iroh-transport

./: .gitignore  Makefile  README.md  go.mod  go.sum  iroh.go  iroh_transport_test.go  listener.go  multiaddr.go
.github/workflows/: tag-branch.yml
ffi/: cgo_wrapper.go  conn.go  transport.go
ffi/include/: libirohffi.h
include/: libirohffi.h
rust/: Cargo.toml  README.md  build.rs  cbindgen.toml
rust/examples/: libp2p_peerid_to_iroh_nodeid.rs
rust/src/: actor.rs  ffi.rs  lib.rs  node.rs  runtime.rs  state.rs  stream.rs  transport.rs
