[package]
name = "irohffi"
description = "auto bootstrap for iroh-gossip topics"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/distributed-topic-tracker"
homepage = "https://rustonbsd.github.io/"
readme = "../README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh = "0.91"
ed25519-dalek = { version = "2.2", features = ["hazmat"] }
tokio = "1"
anyhow = "1"
futures = "0.3"
once_cell = "1"
bs58 = "0.5"

[lib]
name = "irohffi"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false


[[example]]
name = "libp2p_peerid_to_iroh_nodeid"
path = "examples/libp2p_peerid_to_iroh_nodeid.rs"
