[package]
name = "irohffi"
description = "auto bootstrap for iroh-gossip topics"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/distributed-topic-tracker"
homepage = "https://rustonbsd.github.io/"
readme = "../README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh = { version = "0.91", default-features = false }
ed25519-dalek = { version = "2.2", features = ["hazmat"], default-features = false}
tokio = { version = "1", default-features = false, features = ["rt-multi-thread","macros","time"] }
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1"
bs58 = "0.5"

[lib]
name = "irohffi"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false


[[example]]
name = "libp2p_peerid_to_iroh_nodeid"
path = "examples/libp2p_peerid_to_iroh_nodeid.rs"
