[package]
name = "irohffi"
description = "libp2p iroh transport integration"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
readme = "../README.md"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cbindgen = "0.29"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh = { version = "0.91", default-features = false }
ed25519-dalek = { version = "2.2", features = ["hazmat"], default-features = false}
tokio = { version = "1", default-features = false, features = ["rt-multi-thread","macros","time"] }
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1"
bs58 = "0.5"
libc = "0.2.2"

[lib]
name = "irohffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
